# Distcomp

./: .gitignore  README.md
151001/Malinousky/: mvnw.cmd
151004/Belsky/discussion/: pom.xml
151004/Belsky/rv-lab1/: errormessage.yaml  pom.xml
151051/Eremeev/: Makefile  README.md  go.mod  go.sum  main.go
151051/Eremeev/app/: middleware.go
151051/Eremeev/config/: config.go  config.yml
151051/Eremeev/db/: db.go
151051/Eremeev/discussion/: go.mod  go.sum  main.go
151051/Eremeev/ekafka/: consumer.go  go.mod  producer.go  topic.go
151051/Eremeev/publisher/: go.mod  go.sum  main.go
151051/Goron/jpa-task/: pom.xml
151051/Goron/kafka-task/: pom.xml
151051/Goron/nosql-task/: docker-compose.yml  pom.xml
151051/Goron/redis-task/: docker-compose-dev.yml  docker-compose.yml  pom.xml
151051/Goron/rest-task/: pom.xml
151051/Komar/task310-rest/: pom.xml
151051/Komar/task320-jpa/: pom.xml
151051/Komar/task330-nosql/: docker-compose.yml  pom.xml
151051/Komar/task340-kafka/: docker-compose-kafka.yml  docker-compose.yml  pom.xml
151051/Komar/task350-redis/: pom.xml
151051/Lakatun/: lk.sln
151051/Lakatun/Task310/: Program.cs
151051/Lakatun/Task320/: Program.cs
151051/Lakatun/Task340/: docker-compose.yaml
151051/Maksimova/rest-app/: pom.xml
151051/Maksimova/task 2-3-4-5/: pom.xml
151051/Padabied/dc-rest/: HELP.md
151051/Varanko/app/: pom.xml
151051/Yankovich/Task310/: pom.xml
251001/Besedin/: docker-compose.yml  pom.xml
251001/Besedin/module-discussion/: pom.xml
251001/Besedin/module-publisher/: pom.xml
251001/Churavskiy/lab2/: pom.xml
251001/Churavskiy/lab3/: docker-compose.yml  pom.xml
251001/Dadush/DC/: docker-compose.override.yml  docker-compose.yml  launchSettings.json
251001/Homeliyanskaya/user-stories/: pom.xml
251001/Hushcha/lab1/: pom.xml
251001/Kryvitski/: .gitignore
251001/Kryvitski/Task1/: CMakeLists.txt  conanfile.py
251001/Kryvitski/Task1/include/: Article.hpp  Comment.hpp  CommentHandler.hpp  Editor.hpp  Entity.hpp  EntityHandler.hpp  Handler.hpp  Label.hpp  Server.hpp
251001/Kryvitski/Task1/src/: Entity.cpp  EntityHandler.cpp  LabelHandler.cpp  main.cpp
251001/Kryvitski/Task2/: CMakeLists.txt  conanfile.py
251001/Kryvitski/Task3/: CMakeLists.txt  conanfile.py
251001/Kryvitski/Task3/include/: Article.hpp  CassandraController.hpp  Comment.hpp  DBController.hpp  DiscussionHandler.hpp  DiscussionServer.hpp  Editor.hpp  Entity.hpp  PostgresController.hpp  PublisherHandler.hpp  PublisherServer.hpp
251001/Kryvitski/Task3/src/: DBController.cpp  Entity.cpp  PostgresController.cpp  main.cpp
251001/Kryvitski/Task4/: CMakeLists.txt  (+1 more)
251001/Lashkin/: CleanSolution.ps1  docker-compose.yaml
251001/Misiul/Task1/: .gitignore  CMakeLists.txt
251001/Misiul/Task1/include/: Creator.hpp  EntityHandler.hpp  Message.hpp  Server.hpp  Tag.hpp  Topic.hpp  Utils.hpp
251001/Misiul/Task1/src/: main.cpp
251001/Misiul/Task2/: CMakeLists.txt  conanfile.py
251001/Misiul/Task2/include/: DBController.hpp  Utils.hpp
251001/Misiul/Task2/include/Entities/: Creator.hpp  Message.hpp  Topic.hpp
251001/Misiul/Task2/src/: main.cpp
251001/Misiul/Task3/: CMakeLists.txt  conanfile.py
251001/Misiul/Task3/include/: CassandraController.hpp  DBController.hpp  DiscussionHandler.hpp  DiscussionServer.hpp  EntityHandler.hpp  PublisherHandler.hpp  PublisherServer.hpp  Server.hpp  Utils.hpp
251001/Misiul/Task3/include/Entities/: Creator.hpp  Message.hpp  Tag.hpp
251001/Misiul/Task3/src/: CassandraController.cpp  DBController.cpp  Utils.cpp  main.cpp
251001/Misiul/Task4/: CMakeLists.txt  conanfile.py
251001/Misiul/Task4/include/: DiscussionServer.hpp  KafkaProducer.hpp  PostgresController.hpp  PublisherHandler.hpp  PublisherServer.hpp
251001/Misiul/Task4/include/Entities/: Article.hpp  Comment.hpp  Label.hpp
251001/Misiul/Task5/: CMakeLists.txt  conanfile.py
251001/Misiul/Task5/include/: CassandraController.hpp  DiscussionHandler.hpp  DiscussionServer.hpp  PublisherHandler.hpp  PublisherServer.hpp
251001/Misiul/Task5/include/Entities/: Editor.hpp  Entity.hpp
251001/Misiul/Task5/src/: PostgresController.cpp
251001/Shyrynski/: .gitignore  Lab1.sln
251002/Kremez/: compose.yml
251002/Kulik/: docker-compose.yaml  go.mod  go.sum  init-db.sql  main.go  start.sh
251002/Sak/: compose.yml
251002/Sak/laba1/: Dockerfile  config.py  db.sqlite3  db_helper.py  main.py  pyproject.toml  requirements.txt
251002/Sak/laba1/api_v1/: util.py
251002/Sak/laba1/api_v1/creators/: schemas.py  views.py
251002/Sak/laba1/api_v1/messages/: schemas.py  views.py
251002/Sak/laba1/api_v1/stickers/: schemas.py  views.py
251002/Sak/laba1/api_v1/stories/: schemas.py  views.py
251002/Sak/laba1/models/: __init__.py  base.py  creator.py  messages.py  story.py
251002/Samoilenko/: pom.xml
251002/Urbanovich/: .gitignore  docker-compose.yml
251002/Voevoda/: .golangci.yml  Makefile  go.mod  go.sum  sqlc.yaml
251002/Yanucevich/: Dockerfile  Makefile  Yanucevich.sln  asln  compose.yaml  webapp.sln
251003/Habrus/: build.gradle.kts  settings.gradle.kts
251003/Kapinskiy/: docker-compose.yml  pom.xml
251003/Khlyshchankou/: build.gradle  docker-compose.yml  settings.gradle
251003/Molchan/: pom.xml
251003/Punko/: package.json
251003/Skrylev/: MyApp.csproj  MyApp.sln  Program.cs  appsettings.json  distcomp.csproj
251003/Stasevichy/: pom.xml
251003/truhan/: .env
251004/Arefin/: .gitignore  InnoSocialNetwork.sln
251004/Asepkov/: docker-compose.yml  go.mod  go.sum
251004/Krotsyuk/: docker-compose.yml  pom.xml
251004/Krutsko/: DistComp.sln  docker-compose.yaml
251004/Markovskii/: docker-compose.yml
251004/Savenok/: RV.sln
251004/Sazonov/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  go.mod  go.sum  main.tf  variables.tf
(+7053 files in other folders)
